Fixed display on small screen

--- a/WebContent/Basic.css
+++ b/WebContent/Basic.css
@@ -11,6 +11,15 @@ body {
 	margin : 0px;
 }
 
+@media screen and (max-width : 1700px)
+{
+  .main
+  {
+    padding-left: 2.5em;
+    padding-right: 2.5em;
+  }
+}
+
 .nav-ul {
   list-style-type: none;
   margin: 0;
@@ -50,13 +59,17 @@ body {
 
 .title{
 	text-align: center;
-  padding: 3rem;
+  padding: 1.5em;
 }
 
-.main{
-  padding-left: 10rem;
-  padding-right: 10rem;
+
+@media screen and (min-width : 1700px){
+  .main{
+    padding-left: 7em;
+    padding-right: 7em;
+  }
 }
+
 
 .btn-red {
   background-color: #e00 !important; 
@@ -64,7 +77,7 @@ body {
 }
 
 .card-pad {
-  padding: 2.5rem;
+  padding: 2em;
 }
 
 .black-back{
@@ -97,4 +110,15 @@ body {
 .row-flex {
   display: flex;
   flex-wrap: wrap;
+}
+
+.smallfont{
+  font-size: 1.2em;
+}
+.smallfontem{
+  font-size: 1em;
+}
+
+.smallfontem2{
+  font-size: 1.1em;
 }
